src/Components/Cart/Cart.module.css
/* modal */
.cart{
    display: none;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.4)
}

/* cartContent */
.cartContent{
    position: relative;
    float: right;
    width: 30%;
    height: 100%;
    background-color: white;
    border-left: 1px solid black;
}

/* cartHeader */
.cartHeader{
    display: flex;
    justify-content: space-between;
    padding: 0 10px 0 10px;
    border-bottom: 1px solid rgba(0, 0, 0, 0.233);
}

/* close */
.close{
    font-size: 25px;
    color: black;
    background: none;
    border: 0;
}

.close:hover{
    cursor: pointer;
}

/* cartBody */

/* cartFooter */
.cartFooter{
    display: flex;
    justify-content: space-between;
    position: absolute;
    right: 0;
    bottom: 0;
    width: 94%;
    overflow: none;
    padding: 15px;
    border-top: 1px solid rgba(0, 0, 0, 0.233);
}

.cartFooter button{
    width: 150px;
    height: 50px;
    color: black;
    background-color: white;
    border: 3px solid black;
}

.cartFooter button:hover{
    cursor: pointer;
}

/* subtotal */
.subtotal h3{
    margin: 0;
}

.subtotal h4{
    margin-top: 10px;
    margin-bottom: 0;
}

